# ru-boot

./: Cargo.toml  README.md  build.rs  link.ld
.cargo/: config
misc/doc/cev-rz/: REN_r01uh0437jj0600_rz_a1l__20210129.pdf:Zone.Identifier  cev-rz.md
misc/doc/gr-mango/: REN_r01uh0746jj0400-rza2m__20201127.pdf:Zone.Identifier  gr-mango.md  r01qs0042jj0102-rza2m-quick-guide-grmango-gcc.pdf:Zone.Identifier
misc/doc/gr-peach/: gr-peach.md  pin配置.xlsx
src/: main.rs  start.s  vect.s
