[package]
name = "ru-boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ARMv7
[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-eabi-gcc"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
